# Gomoku-AI

./: main.py  requirements.txt
 Compute/: cpp_interface.py  gpu_accelerator.py  parallel_compute.py
AI/: base_ai.py  evaluator.py  mcts_ai.py  minimax_ai.py  model_manager.py  nn_ai.py  rl_ai.py  training_manager.py
Commom/: config.py  constants.py  data_utils.py  error_handler.py  event.py  logger.py  security.py
Game/: board_analyzer.py  game_core.py  game_mode.py  ranking_system.py  rule_engine.py
Server/: client_handler.py  data_sync.py  live_stream.py  main_server.py  p2p_client.py  room.py  room_manager.py  tcp_server.py
Storage/: base_storage.py  game_record_storage.py  model_storage.py  ranking_storage.py  train_data_storage.py  user_storage.py
UI/:  piece.py   ranking.py   resources.py   visualizer.py  board.py  control_panel.py  live_viewer.py  main_window.py
cpp/core/: CMakeLists.txt  gobang_core.cpp  gobang_core.h
